src/objects/Wait_List__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Acupuncture Follow up</fullName>
                </value>
                <value>
                    <fullName>Acupuncture Initial</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health Follow Up</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health Initial</fullName>
                </value>
                <value>
                    <fullName>Blood Draw</fullName>
                </value>
                <value>
                    <fullName>Chiropractic Initial</fullName>
                </value>
                <value>
                    <fullName>Chiropractor Follow up</fullName>
                </value>
                <value>
                    <fullName>Dental Exam</fullName>
                </value>
                <value>
                    <fullName>Derm Consult</fullName>
                </value>
                <value>
                    <fullName>Derm Follow up</fullName>
                </value>
                <value>
                    <fullName>Dietician Follow Up</fullName>
                </value>
                <value>
                    <fullName>Dietician Initial</fullName>
                </value>
                <value>
                    <fullName>Dietitian Consult</fullName>
                </value>
                <value>
                    <fullName>Dietitian Follow up</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Health Coaching Follow Up</fullName>
                </value>
                <value>
                    <fullName>Health Coaching Initial</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Massage</fullName>
                </value>
                <value>
                    <fullName>Med Fit</fullName>
                </value>
                <value>
                    <fullName>Med Fit Plus</fullName>
                </value>
                <value>
                    <fullName>Medical Fitness</fullName>
                </value>
                <value>
                    <fullName>Office Visit</fullName>
                </value>
                <value>
                    <fullName>Optometry Exam</fullName>
                </value>
                <value>
                    <fullName>Optometry Follow up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Physical Therapy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMR_Number__c</fullName>
        <description>EMR #</description>
        <label>EMR #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_Phone_Number__c</fullName>
        <label>Patient Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Wait List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EMR_Number__c</columns>
        <columns>Patient_Phone_Number__c</columns>
        <columns>Appointment_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Appointment_Type__c</columns>
        <columns>Notes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apple_Sacramento</fullName>
        <columns>NAME</columns>
        <columns>EMR_Number__c</columns>
        <columns>Patient_Phone_Number__c</columns>
        <columns>Appointment_Type__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wait_List__c.Patient_Wait_List_Apple_Sacramento</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Apple Sacramento - open wait list</label>
        <sharedTo>
            <group>Apple</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MD_Wait_List</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Date__c</columns>
        <columns>Appointment_Type__c</columns>
        <columns>Patient_Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
        </filters>
        <label>MD Wait List</label>
    </listViews>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wait List</pluralLabel>
    <recordTypes>
        <fullName>Patient_Wait_List_AMAT_Gloucester</fullName>
        <active>true</active>
        <label>Patient Wait List - AMAT Gloucester</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_AMAT_Santa_Clara</fullName>
        <active>true</active>
        <description>Patients on the wait list at AMAT Santa Clara</description>
        <label>Patient Wait List - AMAT Santa Clara</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_Apple_Sacramento</fullName>
        <active>true</active>
        <description>Sacramento</description>
        <label>Patient Wait List - Apple Sacramento</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_Austin</fullName>
        <active>true</active>
        <description>Patients on the wait list at Apple Austin</description>
        <label>Patient Wait List - Austin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_Cup</fullName>
        <active>true</active>
        <description>Patients on the wait list at Apple Cup</description>
        <label>Patient Wait List - Cup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_Facebook</fullName>
        <active>true</active>
        <description>Patients on the wait list at Facebook</description>
        <label>Patient Wait List - Facebook</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_Frost_Bank</fullName>
        <active>true</active>
        <description>Frost Bank Wait List</description>
        <label>Patient Wait List - Frost Bank</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_HEB_Cypress</fullName>
        <active>true</active>
        <label>Patient Wait List - HEB Cypress</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_HEB_Rittiman</fullName>
        <active>true</active>
        <label>Patient Wait List - HEB Rittiman</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_San_Tomas</fullName>
        <active>true</active>
        <description>Patient Wait List for San Tomas</description>
        <label>Patient Wait List - San Tomas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_Shoreline</fullName>
        <active>true</active>
        <description>Patients on the wait list at Shoreline</description>
        <label>Patient Wait List - Shoreline</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Wait_List_Square</fullName>
        <active>true</active>
        <label>Patient Wait List - Square</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>